namespace SistemaOrc.Models.Enums
{
    public enum OrcamentoStatus : int
    {
        Pendente = 0,
        Aprovado = 1,
        Concluido = 2,
        Cancelado = 3
    }
}
